--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
-    <title>Tasker</title>
+    <title>Finny</title>
 </head>
 
 <body>
